Time: 40 ms (25.49%) | Memory: 51.4 MB (70.10%) - LeetSync